# lvgl_demon

./: CMakeLists.txt  README.md
include/: lv_conf.h
src/: main.c
